[gd_scene load_steps=9 format=3 uid="uid://br8f8mkfkgnmw"]

[ext_resource type="PackedScene" uid="uid://bx6isbujnwva2" path="res://assets/player/model.glb" id="1_cc5nu"]
[ext_resource type="Script" path="res://assets/player/player.gd" id="1_lw5ai"]
[ext_resource type="PackedScene" uid="uid://w2a63lvxcq2v" path="res://assets/player/hand.scn" id="3_dlvyk"]
[ext_resource type="PackedScene" uid="uid://2nnbw871vsg8" path="res://assets/player/animation/AnimationPlayer.tscn" id="4_bsw13"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://bvv5pyw3hdoe8" path="res://assets/player/animation/StateMachine.res" id="5_8ethv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kapye"]
radius = 0.478115
height = 1.91377

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_bdchx"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_47hnv"]
radius = 1.6505
height = 1.82421

[node name="Player" type="CharacterBody3D"]
script = ExtResource( "1_lw5ai" )

[node name="model" parent="." instance=ExtResource( "1_cc5nu" )]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0908976, 0)

[node name="Skeleton3D" parent="model/Armature" index="0"]
bones/0/position = Vector3(2.16187, -2.87171, -102.059)
bones/0/rotation = Quaternion(-0.683895, -0.269844, 0.248983, 0.630459)
bones/1/rotation = Quaternion(-0.00249915, 0.0410251, -0.00543821, 0.99914)
bones/2/rotation = Quaternion(0.0988096, 0.0815994, -0.00945375, 0.99171)
bones/3/rotation = Quaternion(0.0988094, 0.0815996, -0.00945378, 0.99171)
bones/4/position = Vector3(0, 18.2534, -4.76837e-07)
bones/4/rotation = Quaternion(0.0241332, -0.0110202, 0.00126563, 0.999645)
bones/5/rotation = Quaternion(-0.0428111, 0.176338, -0.0075351, 0.983369)
bones/7/position = Vector3(6.91087, 16.6311, -0.298216)
bones/7/rotation = Quaternion(0.54037, 0.465336, -0.549066, 0.435878)
bones/8/position = Vector3(1.43589e-05, 14.1652, -3.37611e-05)
bones/8/rotation = Quaternion(0.498601, -0.0375644, 0.0445213, 0.864872)
bones/9/position = Vector3(-8.74723e-06, 35.8272, -6.67602e-06)
bones/9/rotation = Quaternion(0.0847438, -0.202468, 0.399818, 0.889927)
bones/11/position = Vector3(-6.91087, 16.6045, -0.0433125)
bones/11/rotation = Quaternion(0.601473, -0.410248, 0.508346, 0.459903)
bones/12/position = Vector3(6.208e-06, 14.1652, 8.32145e-06)
bones/12/rotation = Quaternion(0.469216, 0.00250388, 0.183918, 0.863715)
bones/13/position = Vector3(5.19929e-07, 35.8674, -7.64411e-06)
bones/13/rotation = Quaternion(0.120933, 0.313281, -0.345999, 0.876079)
bones/15/rotation = Quaternion(-0.0759812, -0.22476, -0.966335, 0.099532)
bones/16/rotation = Quaternion(-0.357788, 0.11895, -0.0197846, 0.925985)
bones/17/rotation = Quaternion(0.53387, 0.0292294, -0.0567271, 0.843155)
bones/18/rotation = Quaternion(0.350455, 0.0237624, -0.0235325, 0.935983)
bones/20/rotation = Quaternion(-0.121796, 0.00715287, 0.9837, 0.13209)
bones/21/rotation = Quaternion(-0.340591, 0.0779991, -0.0221618, 0.936708)
bones/22/position = Vector3(1.77015e-06, 40.8806, -2.8048e-07)
bones/22/rotation = Quaternion(0.648362, 0.00895401, 0.127585, 0.750512)
bones/23/rotation = Quaternion(0.348998, -0.0017922, -0.00194028, 0.93712)

[node name="hand" parent="model/Armature/Skeleton3D" index="1" instance=ExtResource( "3_dlvyk" )]
transform = Transform3D(-0.731841, -0.381111, 0.564945, 0.602742, 0.0248223, 0.79755, -0.317978, 0.924196, 0.211546, -31.0618, -27.1053, -106.821)

[node name="AnimationPlayer" parent="model" instance=ExtResource( "4_bsw13" )]

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 0.964003, 0.265893, 0, -0.265893, 0.964003, -0.280406, 2.56367, 2.55455)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.03192, 0)
shape = SubResource( "CapsuleShape3D_kapye" )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource( "5_8ethv" )
anim_player = NodePath("../model/AnimationPlayer")
active = true
parameters/playback = SubResource( "AnimationNodeStateMachinePlayback_bdchx" )

[node name="Area" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.918324, 0)
shape = SubResource( "CylinderShape3D_47hnv" )

[connection signal="area_entered" from="Area" to="." method="_on_area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]

[editable path="model"]
